fix compilation & add some comments

--- a/aslam_offline_calibration/ethz_apriltag2/CMakeLists.txt
+++ b/aslam_offline_calibration/ethz_apriltag2/CMakeLists.txt
@@ -28,8 +28,8 @@ target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} ${catkin_LIBRARIES})
 
 #demo
 if(NOT APPLE)
-  add_executable(apriltags_demo src/example/apriltags_demo.cpp src/example/Serial.cpp)
-  target_link_libraries(apriltags_demo ${PROJECT_NAME} v4l2)
+#  add_executable(apriltags_demo src/example/apriltags_demo.cpp src/example/Serial.cpp)
+#  target_link_libraries(apriltags_demo ${PROJECT_NAME} v4l2)
 endif()
 
 
