add PerspectiveDistortion to support up to 8 parameters

--- a/aslam_cv/aslam_cameras/CMakeLists.txt
+++ b/aslam_cv/aslam_cameras/CMakeLists.txt
@@ -17,6 +17,7 @@ cs_add_library(${PROJECT_NAME}
   src/NoMask.cpp
   src/NoDistortion.cpp
   src/RadialTangentialDistortion.cpp
+  src/PerspectiveDistortion.cpp
   src/EquidistantDistortion.cpp
   src/FovDistortion.cpp
   src/ImageMask.cpp
