--- a/aslam_offline_calibration/ethz_apriltag2/CMakeLists.txt
+++ b/aslam_offline_calibration/ethz_apriltag2/CMakeLists.txt
@@ -3,23 +3,17 @@ cmake_minimum_required(VERSION 2.8)
 project(ethz_apriltag2)
 
 find_package(catkin REQUIRED COMPONENTS cmake_modules)
-include_directories(${catkin_INCLUDE_DIRS})
-
-find_package(Eigen REQUIRED)
+find_package(Eigen3 REQUIRED)
+find_package(OpenCV REQUIRED)
 
 catkin_package(
-    DEPENDS eigen opencv
-    INCLUDE_DIRS include ${Eigen_INCLUDE_DIRS}
+    DEPENDS 
+    INCLUDE_DIRS include ${EIGEN3_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS}
     LIBRARIES ${PROJECT_NAME}
 )
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/cmake/)
-
-find_package(Eigen REQUIRED)
-find_package(OpenCV REQUIRED)
-
 add_definitions(-fPIC -O3)
-include_directories(include  ${Eigen_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS})
+include_directories(include ${EIGEN3_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS})
 
 #library
 file(GLOB SOURCE_FILES "src/*.cc")
